added smoke model

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         </ul>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="hero">
+          <h1>print('Hello, my name is <span>younes</span>');</h1>
+          <h2>welcome to my website</h2>
+        </div>
+      </section>
+    </main>
     <canvas id="bg"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
