--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>My portfolio</title>
   </head>
   <body>
     <header class="container jc">
       <div>
-        <a href="index.html">
+        <a href="#">
           <img src="./assets/logo.svg" alt="logo - YZ" />
         </a>
       </div>
@@ -22,7 +22,7 @@
               alt="contact"
               srcset=""
             />
-            <a href="#about">About</a>
+            <a class="scroll" href="#about">About</a>
           </li>
           <li class="hover">
             <img
@@ -31,11 +31,11 @@
               alt="projects"
               srcset=""
             />
-            <a href="#skills">Skills</a>
+            <a class="scroll" href="#skills">Skills</a>
           </li>
           <li class="hover">
             <img src="./assets/contact.svg" alt="contact" />
-            <a href="#contact">Contact</a>
+            <a class="scroll" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -62,7 +62,7 @@
         <h1>CONTACT<span>ME</span></h1>
         <button class="hover">
           <a
-            href="youns.zied123@gmail.com"
+            href="mailto: youns.zied123@gmail.com"
             target="_blank"
             rel="noopener noreferrer"
             >email me</a
@@ -97,25 +97,6 @@
 
     <canvas id="bg"></canvas>
     <script type="module" src="/main.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $("a").on("click", function (event) {
-          if (this.hash !== "") {
-            event.preventDefault();
-            var hash = this.hash;
-            $("html, body").animate(
-              {
-                scrollTop: $(hash).offset().top,
-              },
-              800,
-              function () {
-                window.location.hash = hash;
-              }
-            );
-          }
-        });
-      });
-    </script>
+    <script src="/index.js"></script>
   </body>
 </html>
