added some more animation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               alt="contact"
               srcset=""
             />
-            <a class="scroll" href="#about">About</a>
+            <a class="redirect" href="#about">About</a>
           </li>
           <li class="hover">
             <img
@@ -31,23 +31,23 @@
               alt="projects"
               srcset=""
             />
-            <a class="scroll" href="#skills">Skills</a>
+            <a class="redirect" href="#skills">Skills</a>
           </li>
           <li class="hover">
             <img src="./assets/contact.svg" alt="contact" />
-            <a class="scroll" href="#contact">Contact</a>
+            <a class="redirect" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
     </header>
     <main>
       <section class="container hero">
-        <h1>Hello, my name is <span>younes</span></h1>
-        <h2>welcome to my website</h2>
+        <h1 class="animation1">Hello, my name is <span>younes</span></h1>
+        <h2 class="animation2">welcome to my website</h2>
       </section>
       <section id="about" class="container about">
-        <h1>ABOUT <span>ME</span></h1>
-        <p>
+        <h1 class="animate" id="left-to-right">ABOUT <span>ME</span></h1>
+        <p class="animate" id="down-to-up">
           I'm an electrical engineering, who loves codeing and designing Lorem
           ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eligendi?
           Nemo cupiditate quod reprehenderit. Modi porro ullam odit quos
