added the mobile version

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           </li>
         </ul>
       </div>
+      <img class="arrow animation5" src="./assets/arrow.svg" alt="nav-bar" />
     </header>
     <main>
       <section class="container hero">
@@ -48,18 +49,21 @@
       <section id="about" class="container about">
         <h1 class="animate" id="left-to-right">ABOUT <span>ME</span></h1>
         <p class="animate" id="down-to-up">
-          I'm an electrical engineering, who loves codeing and designing Lorem
-          ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eligendi?
-          Nemo cupiditate quod reprehenderit. Modi porro ullam odit quos
-          suscipit nostrum? Voluptatem incidunt eum doloribus animi. Amet
-          corporis sequi aliquam!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus dolore consequatur quo assumenda deserunt minus
+          deleniti veritatis ut, eveniet, distinctio architecto quasi neque
+          dolor quis. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Nihil recusandae mollitia cumque? Aspernatur perferendis magnam earum
+          tenetur soluta eaque? Iure natus reiciendis impedit quidem
+          praesentium.
         </p>
       </section>
-      <section id="skills" class="container projects">
+      <section id="skills" class="container skills">
         <h1>skills</h1>
+        <canvas id="canvas"></canvas>
       </section>
       <section id="contact" class="container contact">
-        <h1>CONTACT<span>ME</span></h1>
+        <h1>CONTACT <span>ME</span></h1>
         <button class="hover">
           <a
             href="mailto: youns.zied123@gmail.com"
