--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="../assets/logo.svg" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
   </head>
@@ -18,7 +19,7 @@
           <li class="hover">
             <img
               style="top: -15px; left: 0px"
-              src="./assets/About.svg"
+              src="../assets/About.svg"
               alt="contact"
               srcset=""
             />
@@ -100,7 +101,7 @@
     </main>
 
     <canvas id="bg"></canvas>
-    <script type="module" src="/main.js"></script>
-    <script src="/index.js"></script>
+    <script type="module" src="./main.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
