--- a/client/index.html
+++ b/client/index.html
@@ -8,72 +8,103 @@
     <title>My portfolio</title>
   </head>
   <body>
-    <header class="container jc">
-      <div>
-        <a href="#">
-          <img src="./assets/logo.svg" alt="logo - YZ" />
-        </a>
+    <header>
+      <div class="header container">
+        <div class="logo">
+          <img src="./assets/logo.svg" alt="logo" srcset="" />
+        </div>
+        <nav class="nav-bar">
+          <ul>
+            <li class="hover">
+              <a class="redirect" href="#about">About</a>
+            </li>
+            <li class="hover">
+              <a class="redirect" href="#skills">Skills</a>
+            </li>
+            <li class="hover">
+              <a class="redirect" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <img class="arrow animation5" src="./assets/arrow.svg" alt="nav-bar" />
       </div>
-      <div class="nav-bar">
-        <ul>
-          <li class="hover">
-            <img
-              style="top: -15px; left: 0px"
-              src="../assets/About.svg"
-              alt="contact"
-              srcset=""
-            />
-            <a class="redirect" href="#about">About</a>
-          </li>
-          <li class="hover">
-            <img
-              style="top: -15px; left: 5px"
-              src="./assets/projects.svg"
-              alt="projects"
-              srcset=""
-            />
-            <a class="redirect" href="#skills">Skills</a>
-          </li>
-          <li class="hover">
-            <img src="./assets/contact.svg" alt="contact" />
-            <a class="redirect" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <img class="arrow animation5" src="./assets/arrow.svg" alt="nav-bar" />
     </header>
-    <main>
-      <section class="container hero">
+    <main class="container">
+      <section class="hero">
         <h1 class="animation1">Hello, my name is <span>younes</span></h1>
         <h2 class="animation2">welcome to my website</h2>
       </section>
-      <section id="about" class="container about">
-        <h1 class="animate" id="left-to-right">ABOUT <span>ME</span></h1>
-        <p class="animate" id="down-to-up">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Necessitatibus dolore consequatur quo assumenda deserunt minus
-          deleniti veritatis ut, eveniet, distinctio architecto quasi neque
-          dolor quis. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Nihil recusandae mollitia cumque? Aspernatur perferendis magnam earum
-          tenetur soluta eaque? Iure natus reiciendis impedit quidem
-          praesentium.
-        </p>
+      <section id="about" class="about">
+        <svg
+          class="svg1 animate"
+          id="left-to-right"
+          width="1545"
+          height="362"
+          viewBox="0 0 1545 362"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            id="ABOUT"
+            d="M196 356C193.667 356 191.5 355.333 189.5 354C187.5 352.333 186.167 350.5 185.5 348.5L160.5 255.5C159.5 252.5 157.667 250 155 248C152.333 246 149.5 245 146.5 245H71C68.6667 245 66.6667 244.333 65 243C63.6667 241.333 63 239.5 63 237.5V199C63 197 63.6667 195.167 65 193.5C66.6667 191.833 68.6667 191 71 191H131C134 191 136.333 190 138 188C140 185.667 140.5 183 139.5 180L111.5 78C110.833 75.3333 109.167 73 106.5 71C103.833 69 101 68 98 68H94.5C91.8333 68 89.1667 69 86.5 71C83.8333 73 82.1667 75.3333 81.5 78L63 145C62.3333 147 61 148.5 59 149.5C57.3333 150.5 55.3333 150.667 53 150L6 138.5C4 138.167 2.33333 137 1 135C1.81297e-06 133 -0.166665 131 0.500002 129L32 13.5C32.6667 11.5 34 9.66665 36 7.99998C38.3333 6.33332 40.5 5.49998 42.5 5.49998H150C152 5.49998 154.167 6.33332 156.5 7.99998C158.833 9.33332 160.333 11 161 13L253 349V350C253 354 251 356 247 356H196ZM337.543 356C335.21 356 334.043 354.833 334.043 352.5V301C334.043 298.667 335.21 297.5 337.543 297.5H420.043C432.043 297.5 442.043 293.167 450.043 284.5C458.376 275.833 462.543 265.5 462.543 253.5C462.543 241.5 458.376 231.5 450.043 223.5C441.71 215.167 431.71 211 420.043 211H357.043C353.71 211 352.043 209.333 352.043 206V154C352.043 153.333 352.376 152.667 353.043 152C353.71 151 354.543 150.5 355.543 150.5H383.543C394.876 150.5 404.543 146.333 412.543 138C420.876 129.667 425.043 119.833 425.043 108.5C425.043 96.8333 420.876 86.8333 412.543 78.5C404.21 70.1667 394.21 66 382.543 66H346.543C341.876 66 337.71 67.6666 334.043 71C330.71 74.3333 329.043 78.3333 329.043 83V96C329.043 97 328.543 97.8333 327.543 98.5C326.876 99.1667 326.21 99.5 325.543 99.5H282.043C279.376 99.5 278.043 98.3333 278.043 96V9.49999C278.043 7.16665 279.376 5.99998 282.043 5.99998H382.543C401.21 5.99998 418.376 10.6666 434.043 20C449.71 29 462.043 41.3333 471.043 57C480.376 72.6667 485.043 89.8333 485.043 108.5C485.043 127.833 479.71 146 469.043 163C485.71 172.333 498.876 185.167 508.543 201.5C518.21 217.5 523.043 234.833 523.043 253.5C523.043 272.167 518.376 289.333 509.043 305C500.043 320.667 487.543 333.167 471.543 342.5C455.876 351.5 438.71 356 420.043 356H337.543ZM636.207 319.5C615.54 301.833 599.707 280.833 588.707 256.5C577.707 231.833 572.207 206.333 572.207 180C572.207 159.333 575.54 139.167 582.207 119.5C589.207 99.5 599.54 81.3333 613.207 65C629.54 45 648.707 29.6667 670.707 19C692.707 7.99999 715.874 1.83332 740.207 0.499987H741.207C743.874 0.499987 746.04 1.49998 747.707 3.49998C749.707 5.49997 750.874 7.99997 751.207 11V54.5C751.207 60.8333 747.707 64.3333 740.707 65C725.707 66.3333 711.374 70.6667 697.707 78C684.04 85 672.54 94.5 663.207 106.5C645.207 128.5 636.207 153.333 636.207 181C636.207 197.667 639.707 213.833 646.707 229.5C653.707 244.833 663.707 258 676.707 269C698.707 287 723.374 296 750.707 296C767.374 296 783.374 292.5 798.707 285.5C814.04 278.5 827.04 268.333 837.707 255C846.707 244.333 853.374 232.667 857.707 220C862.374 207 864.707 193.833 864.707 180.5C864.707 161.5 860.54 143.833 852.207 127.5C850.54 124.167 849.707 120.833 849.707 117.5C849.707 113.167 851.707 109.333 855.707 106C858.374 104.333 863.54 100.833 871.207 95.5C878.874 90.1667 883.707 86.8333 885.707 85.5C888.374 83.8333 890.874 83 893.207 83C898.54 83 902.54 85.5 905.207 90.5C921.207 118.5 929.207 148.667 929.207 181C929.207 202 925.707 222.5 918.707 242.5C911.707 262.167 901.374 280.167 887.707 296.5C871.374 317.5 850.874 333.667 826.207 345C801.874 356 776.374 361.5 749.707 361.5C728.707 361.5 708.374 358 688.707 351C669.04 343.667 651.54 333.167 636.207 319.5ZM1115.82 359.5C1093.48 359.5 1072.82 354 1053.82 343C1035.15 332 1020.15 317 1008.82 298C997.816 279 992.316 258.333 992.316 236V139C992.316 136.333 993.15 134.167 994.816 132.5C996.816 130.833 998.983 130 1001.32 130H1048.32C1050.98 130 1053.15 130.833 1054.82 132.5C1056.48 134.167 1057.32 136.333 1057.32 139V236C1057.32 252.667 1062.98 266.833 1074.32 278.5C1085.65 289.833 1099.48 295.5 1115.82 295.5C1128.48 295.5 1140.15 292.833 1150.82 287.5C1161.48 282.167 1169.98 275 1176.32 266C1182.65 256.667 1185.82 246.667 1185.82 236V14C1185.82 11.6666 1186.65 9.66665 1188.32 7.99998C1190.32 5.99999 1192.65 4.99999 1195.32 4.99999H1241.32C1243.98 4.99999 1246.15 5.99999 1247.82 7.99998C1249.82 9.66665 1250.82 11.6666 1250.82 14V236C1250.82 258.667 1244.98 279.5 1233.32 298.5C1221.98 317.167 1205.98 332 1185.32 343C1164.98 354 1141.82 359.5 1115.82 359.5ZM1001.32 66.5C998.983 66.5 996.816 65.6666 994.816 64C993.15 62 992.316 59.8333 992.316 57.5V14C992.316 11.3333 993.15 9.16665 994.816 7.49999C996.816 5.83332 998.983 4.99999 1001.32 4.99999H1048.32C1050.98 4.99999 1053.15 5.83332 1054.82 7.49999C1056.48 9.16665 1057.32 11.3333 1057.32 14V57.5C1057.32 59.8333 1056.48 62 1054.82 64C1053.15 65.6666 1050.98 66.5 1048.32 66.5H1001.32ZM1366.41 355C1362.07 355 1359.91 352.833 1359.91 348.5V78.5C1359.91 75.1667 1358.74 72.5 1356.41 70.5C1354.07 68.1667 1351.24 67 1347.91 67H1319.41C1317.74 67 1316.24 66.3333 1314.91 65C1313.57 63.6667 1312.91 62 1312.91 60V13.5C1312.91 11.5 1313.57 9.83331 1314.91 8.49997C1316.24 7.16664 1317.74 6.49997 1319.41 6.49997H1537.91C1539.57 6.49997 1541.07 7.16664 1542.41 8.49997C1543.74 9.83331 1544.41 11.5 1544.41 13.5V60C1544.41 62 1543.74 63.6667 1542.41 65C1541.07 66.3333 1539.57 67 1537.91 67H1444.41C1441.07 67 1438.24 68.1667 1435.91 70.5C1433.57 72.8333 1432.41 75.5 1432.41 78.5V348.5C1432.41 350.5 1431.74 352.167 1430.41 353.5C1429.07 354.5 1427.57 355 1425.91 355H1366.41Z"
+          />
+        </svg>
+        <svg
+          class="svg2 animate"
+          id="left-to-right"
+          width="350"
+          height="632"
+          viewBox="0 0 350 632"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            id="me"
+            d="M350 623.5C350 625.833 349.167 627.833 347.5 629.5C345.5 631.167 343.333 632 341 632L9.49997 632C7.16665 632 5.16666 631.167 3.49999 629.5C1.49998 627.833 0.49997 625.833 0.49997 623.5L0.49997 574.5C0.49997 571.167 2.16664 568.667 5.49999 567L131.5 491C132.167 490.667 133.167 489.833 134.5 488.5C135.833 486.833 136.5 484.833 136.5 482.5V481.5C136.5 479.167 135.833 477.5 134.5 476.5C132.833 475.167 131.667 474.333 131 474L5.99999 398.5C2.33331 396.167 0.49997 393.5 0.49997 390.5L0.49997 341C0.49997 338.667 1.49998 336.667 3.49999 335C5.16666 333.333 7.16665 332.5 9.49997 332.5L341 332.5C343.333 332.5 345.5 333.333 347.5 335C349.167 336.667 350 338.667 350 341V390C350 392.667 349.167 394.833 347.5 396.5C345.833 398.167 343.667 399 341 399H142.5C139.167 399 137.5 399.667 137.5 401C137.5 402.333 138.833 403.833 141.5 405.5L216 458C220.333 461 223.167 463.667 224.5 466C225.833 468 226.5 471.667 226.5 477V485.5C226.5 491.833 226 496.167 225 498.5C224 500.833 221.833 503.167 218.5 505.5L142 559.5C139 561.5 137.5 563 137.5 564C137.5 565.333 139 566 142 566L341 566C343.333 566 345.5 566.833 347.5 568.5C349.167 570.167 350 572.333 350 575V623.5ZM348.5 236.699C348.5 239.033 347.667 241.199 346 243.199C344 244.866 341.833 245.699 339.5 245.699L10 245.699C7.33332 245.699 5.16666 244.866 3.49999 243.199C1.83333 241.199 0.999993 239.033 0.999993 236.699L0.999993 12.6992C0.999993 10.0325 1.83333 7.86588 3.49999 6.19921C5.16666 4.53255 7.33332 3.69921 10 3.69921H52C54.3333 3.69921 56.5 4.53255 58.5 6.19921C60.1667 7.86588 61 10.0325 61 12.6992L61 174.199C61 176.533 61.8333 178.699 63.5 180.699C65.1667 182.366 67.3333 183.199 70 183.199L143.5 183.199H145C148 183.199 150.167 182.533 151.5 181.199C152.5 179.866 153 176.699 153 171.699V46.6992C153 44.3659 153.833 42.3659 155.5 40.6992C156.833 39.0325 158.667 38.1992 161 38.1992H203.5C205.833 38.1992 207.833 39.0325 209.5 40.6992C210.833 42.3659 211.5 44.3659 211.5 46.6992V172.199C211.5 176.533 212.833 179.533 215.5 181.199C217.833 182.533 220.333 183.199 223 183.199H276C279.333 183.199 282.167 182.366 284.5 180.699C286.833 178.699 288 174.866 288 169.199V9.1992C288 6.86588 289 4.86589 291 3.19922C292.667 1.19921 294.833 0.199199 297.5 0.199199H339.5C341.833 0.199199 344 1.03253 346 2.6992C347.667 4.36586 348.5 6.53253 348.5 9.1992V236.699Z"
+          />
+        </svg>
+        <div id="down-to-up" class="about-me animate">
+          <h2>
+            I'm an electrical engineering, who loves codeing and designing
+          </h2>
+          <p>
+            I’m currently in my third year of uni. and as a way of spending my
+            summer vacation I’ve created this website. In hopes of showing off
+            myself for any future employer, so please take a look and feel free
+            to contact me whenever you are ready.
+          </p>
+        </div>
       </section>
-      <section id="skills" class="container skills">
-        <h1>skills</h1>
-        <canvas id="canvas"></canvas>
+      <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <div class="flex">
+          <ul class="flex">
+            <li>javaScript</li>
+            <li>mongodb</li>
+            <li>react</li>
+            <li>HTMl & CSS</li>
+            <li>python</li>
+          </ul>
+          <ul class="flex">
+            <li>C++</li>
+            <li>Adobe XD</li>
+            <li>Adobe illustrator</li>
+            <li>figma</li>
+            <li>three.js</li>
+          </ul>
+        </div>
       </section>
-      <section id="contact" class="container contact">
+      <section id="contact" class="contact flex">
         <h1>CONTACT <span>ME</span></h1>
-        <button class="hover">
+        <div class="email flex hover">
           <a
             href="mailto: youns.zied123@gmail.com"
             target="_blank"
             rel="noopener noreferrer"
             >email me</a
           >
-        </button>
-        <div class="container links">
+        </div>
+        <div class="flex links">
           <a
             href="https://www.instagram.com/youns_zied/"
             target="_blank"
@@ -99,7 +130,6 @@
         <h3>let's <span>GO</span></h3>
       </section>
     </main>
-
     <canvas id="bg"></canvas>
     <script type="module" src="./main.js"></script>
     <script src="index.js"></script>
